--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Office Hours · Kevin Middleton</title>
 
-  <!-- Open Graph -->
+   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Free Product Help. No Strings." />
   <meta property="og:description"
-    content="Weekly product office hours. Bring a messy problem. Leave with a clearer head. No pitch. No recruiting." />
+    content="30 minutes. Real problems. Calm thinking." />
   <meta property="og:url" content="https://middleton.io/officehours" />
   <meta property="og:image" content="https://middleton.io/officehours/images/officehours.png" />
-  <meta property="og:image:alt" content="Product Office Hours. Bring a messy problem. Leave with a clearer head." />
-
+  <meta property="og:image:alt" content="Product Office Hours. Free product help. No strings." />
+  
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Free Product Help. No Strings." />
-  <meta name="twitter:description" content="Office hours for product problems that don’t fit in a deck." />
+  <meta name="twitter:description" content="30 minutes. Real problems. Calm thinking." />
   <meta name="twitter:image" content="https://middleton.io/officehours/images/officehours.png" />
 
   <link rel="stylesheet" href="../styles.css">
