--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -67,30 +67,19 @@
         </ul>
       </section>
 
-      <!-- WHAT I BRING -->
-      <section class="nyc-section">
-        <h2>What I bring to a team</h2>
-        <ul class="nyc-list">
-          <li>12+ years across consumer, enterprise, and platform SaaS</li>
-          <li>Messy, real-world domains where outcomes actually matter</li>
-          <li>Product judgment built from shipping, not presenting</li>
-          <li>Comfort moving between strategy, execution, and details</li>
-          <li>A bias toward clarity, simplicity, and forward motion</li>
-        </ul>
-
-        <p class="nyc-pullquote">I'm at my best when I'm trusted with ownership and given room to drive.</p>
-      </section>
-
       <!-- HOW I WORK -->
       <section class="nyc-section">
         <h2>How I work</h2>
         <ul class="nyc-list">
+          <li>12+ years across consumer, enterprise, and platform SaaS</li>
+          <li>Product judgment built from shipping, not presenting</li>
+          <li>Comfortable moving between strategy, execution, and details</li>
           <li>I bring calm to chaotic systems</li>
-          <li>I wrangle process and people to get real results</li>
           <li>I partner closely with engineering and design</li>
           <li>I say the direct thing when it helps the team move</li>
-          <li>I focus on real progress, not theater</li>
         </ul>
+
+        <p class="nyc-pullquote">I'm at my best when I'm trusted with ownership and given room to drive.</p>
       </section>
 
       <!-- TEAM FIT -->
@@ -104,18 +93,6 @@
           <li>Teams that hang out because they want to, not because HR planned it</li>
         </ul>
         <p class="nyc-closer">If your team never laughs together, we probably won't work well.</p>
-      </section>
-
-      <!-- THE WORK -->
-      <section class="nyc-section">
-        <h2>The work</h2>
-        <ul class="nyc-list">
-          <li>Core product, platform, or internal tooling</li>
-          <li>Complex workflows and systems</li>
-          <li>Companies with product-market fit, ready to scale</li>
-          <li>NYC-based teams or remote teams with real connection</li>
-        </ul>
-        <p class="nyc-closer">I care more about the team and the problem than the domain.</p>
       </section>
 
       <!-- PROOF -->
@@ -142,7 +119,7 @@
       <!-- CTA -->
       <section class="nyc-cta" id="cta">
         <h4>If this resonates</h4>
-        <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank"
+        <a href="https://calendly.com/kevin-middleton/15min" target="_blank"
           class="btn btn-primary plausible-event-name=Calendly+Click">Let's talk</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
       </section>
