--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -71,7 +71,7 @@
             <section class="fixer-section">
               <p>You don't need a framework.</p>
               <p>You don't need a deck.</p>
-              <p>You need 15 minutes of calm thinking with someone who's been here before.</p>
+              <p>You need 30 minutes of calm thinking with someone who's been here before.</p>
             </section>
 
             <div class="fixer-divider">—</div>
@@ -82,6 +82,7 @@
               <p>Sometimes the problem is scope. Sometimes it's stakeholders. Sometimes it's just too close to see
                 clearly.</p>
               <p>A second brain helps.</p>
+              <p style="margin-top: 28px; margin-bottom: -28px;"><a href="https://www.linkedin.com/in/kevinmiddleton/" target="_blank" rel="noopener noreferrer" style="color: var(--fixer-text-soft); text-decoration: underline; text-underline-offset: 3px;">Questions? DM me on LinkedIn.</a></p>
             </section>
 
           </div>
@@ -107,7 +108,7 @@
               <span>For:</span> <em class="rx-handwriting">Whatever's stuck</em>
             </div>
             <div class="fixer-rx-line">
-              <span>Dosage:</span> <em class="rx-handwriting">15 minutes</em>
+              <span>Dosage:</span> <em class="rx-handwriting">30 minutes</em>
             </div>
             <div class="fixer-rx-line">
               <span>Refills:</span> <em class="rx-handwriting">As needed</em>
@@ -121,14 +122,16 @@
             </div>
           </div>
 
-          <p class="cta-note">No pitch. No strings. Just thinking together.</p>
+          <p class="cta-note">Just thinking together. Come as you are.</p>
         </div>
 
-        <!-- G2 Pen -->
-        <img src="https://middleton.io/fixer/images/G2Pen.png" alt="" class="g2-pen" aria-hidden="true">
-      </div>
+        </div>
+
+      <!-- G2 Pen -->
+      <img src="https://middleton.io/fixer/images/G2Pen.png" alt="" class="g2-pen" aria-hidden="true">
 
     </div>
+
   </main>
 </body>
 
