--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -102,7 +102,7 @@
 
           <!-- Rx Body -->
           <div class="fixer-rx-body">
-            <h2 class="rx-headline">Take as needed.</h2>
+            <h2 class="rx-headline">Apply directly to problem.</h2>
 
             <div class="fixer-rx-line">
               <span>For:</span> <em class="rx-handwriting">Whatever's stuck</em>
