--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -102,7 +102,7 @@
           <li>You don't need to prepare anything</li>
           <li>I won't follow up unless you want me to</li>
           <li>There's no "too small" problem</li>
-          <li>This is genuinely free — I'm staying sharp while job searching</li>
+          <li>This is genuinely free</li>
         </ul>
       </section>
 
@@ -122,7 +122,7 @@
 
       <!-- FOOTER NOTE -->
       <section class="oh-footer">
-        <p>Come as you are. Questions? <a href="https://www.linkedin.com/in/kevinmiddleton/" target="_blank" rel="noopener noreferrer">DM me on LinkedIn</a>.</p>
+        <p>Questions? <a href="https://www.linkedin.com/in/kevinmiddleton/" target="_blank" rel="noopener noreferrer">DM me on LinkedIn</a>.</p>
       </section>
 
     </div>
