--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -74,7 +74,7 @@
         </p>
         <div class="meta">NYC · 3 cats · Strong opinions, loosely held ✧</div>
 
-        <p class="hero-cta-text">Open to work, open to chat, open to unsolicited cat pics. 15 min? 💬</p>
+        <p class="hero-cta-text">Open to work, open to chat, open to unsolicited cat pics. 30 min? 💬</p>
         <div class="hero-cta-buttons">
           <button class="btn kawaii-btn boing" onclick="handleCTA()">Let's talk 🐱</button>
           <a href="#serious-stuff" class="btn kawaii-btn-ghost">Wait, is this person legit? →</a>
@@ -87,8 +87,7 @@
       <section class="kawaii-section rainbow-border">
         <h2>✨ The vibe</h2>
         <p>
-          It's software, not magic. And we're not curing cancer. <span class="handwritten">(Though if you are, that's
-            super serious, you guys!)</span>
+          It's software, not magic. And we're not curing cancer. <span class="handwritten">(Unless you are, in which case, respect!)</span>
         </p>
         <p>
           I love doing great work with great people. Give me a hard problem, a team that collaborates for real, and an
@@ -102,8 +101,7 @@
       <section class="kawaii-section rainbow-border">
         <h2 class="gradient-text">🛠 Meow I Work</h2>
         <ul class="kawaii-list">
-          <li>I think out loud and talk more than you'd expect. That's the collaboration working~</li>
-          <li>My brain runs at 1000 mph, mostly thinking about process improvements ⚡</li>
+          <li>I think out loud — that's the collaboration working~</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
           <li>I have opinions, but I'll change my mind when you have better info ✧</li>
           <li>I focus on real progress, not theater <span class="nowrap">(ノ◕ヮ◕)ノ*:・゚✧</span></li>
@@ -116,8 +114,7 @@
       <section class="kawaii-section kawaii-callout rainbow-border">
         <h2>💬 On speaking up</h2>
         <p>
-          I'm not afraid to speak my mind, when I feel safe. And I want to build that same environment for you. Teams do
-          their best work when people can say the honest thing without fear~
+          I speak my mind when I feel safe — and I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
         </p>
         <p class="kawaii-closer">If your team has that energy, we'll get along great! (◕ᴗ◕✿)</p>
       </section>
@@ -148,7 +145,7 @@
         <ul class="kawaii-list">
           <li>"Go-getter: when he knows how to help, he just does it" ✧</li>
           <li>"Brain works 1000 miles an hour" ⚡</li>
-          <li>"Strong opinions loosely held" 💭</li>
+          <li>"Knows when to push and when to let go" 💭</li>
           <li>"Fills gaps and provides cover when needed" 🛡️</li>
           <li>"Loyal: when he feels you've done right by him" 💖</li>
         </ul>
@@ -157,26 +154,35 @@
       <div class="section-divider">✧･ﾟ: *✧･ﾟ:* 　*:･ﾟ✧*:･ﾟ✧</div>
 
       <!-- THE WORK -->
-      <section class="kawaii-section rainbow-border" id="serious-stuff">
-        <h2>💼 The Serious Stuff</h2>
-        <p>
-          12+ years building products at Oracle, Rocket Lawyer, Lever, Sendoso, and more~
-          Enterprise platforms, complex integrations, conversion optimization, and systems that teams actually rely on!
-        </p>
-        <p class="handwritten" style="margin-top: var(--spacing-md); font-size: 1.3rem;">
-          (I promise I'm professional when I need to be)
-        </p>
-        <p style="margin-top: var(--spacing-md);">
-          <a href="https://middleton.io/" target="_blank" class="kawaii-link boing">See the full paw-folio →</a>
-        </p>
-      </section>
+<section class="kawaii-section rainbow-border" id="serious-stuff">
+  <h2>💼 The Serious Stuff</h2>
+  <p>
+    12+ years building products at Oracle, Rocket Lawyer, Lever, Sendoso, and more~
+    Enterprise platforms, complex integrations, conversion optimization, and systems that teams actually rely on!
+  </p>
+  <p class="handwritten" style="margin-top: var(--spacing-md); font-size: 1.3rem;">
+    (I promise I'm professional when I need to be)
+  </p>
+  <p style="margin-top: var(--spacing-md);">
+    <a href="https://middleton.io/" target="_blank" class="kawaii-link boing">See my full paw-folio →</a>
+  </p>
+  <p style="margin-top: var(--spacing-sm); font-size: 0.95rem; opacity: 0.85;">
+    Or jump straight to a case study:<br>
+    <a href="https://middleton.io/casestudies/case-study-oracle.html" class="kawaii-link">Oracle</a> · 
+    <a href="https://middleton.io/casestudies/case-study-lever.html" class="kawaii-link">Lever</a> · 
+    <a href="https://middleton.io/casestudies/case-study-sendoso.html" class="kawaii-link">Sendoso</a> · 
+    <a href="https://middleton.io/casestudies/case-study-hvac.html" class="kawaii-link">HVAC.com</a> · 
+    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html" class="kawaii-link">RL: Partner sites</a> · 
+    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html" class="kawaii-link">RL: Mobile conversion</a>
+  </p>
+</section>
 
       <div class="section-divider"><span class="nowrap">♡⸜(˃ ᵕ ˂ )⸝♡</span></div>
 
       <!-- CTA -->
       <section class="kawaii-cta rainbow-border">
         <h3 class="gradient-text">Want to chat? <span class="nowrap">(=^･ω･^=)</span></h3>
-        <p class="cta-subline">15 minutes. I promise not to make cat puns.<br><span class="cta-whisper handwritten">(I
+        <p class="cta-subline">30 minutes. I promise not to make cat puns.<br><span class="cta-whisper handwritten">(I
             might make cat puns.)</span></p>
         <button class="btn kawaii-btn boing" id="ctaBtn" onclick="handleCTA()">Let's talk ✨🐱✨</button>
         <p class="cta-note">I'll tell Blue you said hi~ ♡</p>
