--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -168,12 +168,12 @@
   </p>
   <p style="margin-top: var(--spacing-sm); font-size: 0.95rem; opacity: 0.85;">
     Or jump straight to a case study:<br>
-    <a href="https://middleton.io/casestudies/case-study-oracle.html" class="kawaii-link">Oracle</a> · 
-    <a href="https://middleton.io/casestudies/case-study-lever.html" class="kawaii-link">Lever</a> · 
-    <a href="https://middleton.io/casestudies/case-study-sendoso.html" class="kawaii-link">Sendoso</a> · 
-    <a href="https://middleton.io/casestudies/case-study-hvac.html" class="kawaii-link">HVAC.com</a> · 
-    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html" class="kawaii-link">RL: Partner sites</a> · 
-    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html" class="kawaii-link">RL: Mobile conversion</a>
+    <a href="https://middleton.io/casestudies/case-study-oracle.html" target="_blank" class="kawaii-link">Oracle</a> · 
+    <a href="https://middleton.io/casestudies/case-study-lever.html" target="_blank" class="kawaii-link">Lever</a> · 
+    <a href="https://middleton.io/casestudies/case-study-sendoso.html" target="_blank" class="kawaii-link">Sendoso</a> · 
+    <a href="https://middleton.io/casestudies/case-study-hvac.html" target="_blank" class="kawaii-link">HVAC.com</a> · 
+    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html" target="_blank" class="kawaii-link">RL: Partner sites</a> · 
+    <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html" target="_blank" class="kawaii-link">RL: Mobile conversion</a>
   </p>
 </section>
 
