--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kevin Middleton · ✨🐱✨</title>
+  <title>Product Manager + Cat Dad · ✨🐱✨</title>
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
