--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -101,7 +101,7 @@
       <section class="kawaii-section rainbow-border">
         <h2 class="gradient-text">🛠 Meow I Work</h2>
         <ul class="kawaii-list">
-          <li>I think out loud — that's the collaboration working~</li>
+          <li>I think out loud (that's the collaboration working)~</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
           <li>I have opinions, but I'll change my mind when you have better info ✧</li>
           <li>I focus on real progress, not theater <span class="nowrap">(ノ◕ヮ◕)ノ*:・゚✧</span></li>
@@ -114,7 +114,7 @@
       <section class="kawaii-section kawaii-callout rainbow-border">
         <h2>💬 On speaking up</h2>
         <p>
-          I speak my mind when I feel safe — and I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
+          I speak my mind when I feel safe and I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
         </p>
         <p class="kawaii-closer">If your team has that energy, we'll get along great! (◕ᴗ◕✿)</p>
       </section>
