--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -8,9 +8,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Seriously unserious product thinking." />
+  <meta property="og:title" content="Product Manager. Cat Dad. Seriously Unserious." />
   <meta property="og:description"
-    content="Product manager. Cat dad. Believes great work comes from teams that actually like working together." />
+    content="Great work comes from teams that actually like working together. Also cats." />
   <meta property="og:url" content="https://middleton.io/catdad" />
   <meta property="og:image" content="https://middleton.io/catdad/images/catdad.png" />
   <meta property="og:image:alt"
@@ -18,7 +18,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Seriously unserious product thinking." />
+  <meta name="twitter:title" content="Product Manager. Cat Dad. Seriously Unserious." />
   <meta name="twitter:description" content="Product, people, and a little humanity. Also cats." />
   <meta name="twitter:image" content="https://middleton.io/catdad/images/catdad.png" />
 
