--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -48,7 +48,8 @@
           I don't take myself too seriously.
         </p>
 
-        <div class="meta">New York City · In‑Office or Remote</div>
+        <div class="meta">New York City · In-Office or Remote</div>
+        <div class="meta status">Looking for my next team</div>
 
         <div class="nyc-hero-ctas">
           <a href="#cta" class="nyc-hero-link">Let's talk →</a>
