--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -48,7 +48,7 @@
           I don't take myself too seriously.
         </p>
 
-        <div class="meta">New York City · In-Office or Remote</div>
+        <div class="meta">Product Manager · New York City</div>
         <div class="meta status">Looking for my next team</div>
 
         <div class="nyc-hero-ctas">
