--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -72,7 +72,7 @@
       <section class="nyc-section">
         <h2>How I work</h2>
         <ul class="nyc-list">
-          <li>12+ years across consumer, enterprise, and platform SaaS</li>
+          <li>Consumer, enterprise, and platform SaaS</li>
           <li>Product judgment built from shipping, not presenting</li>
           <li>Comfortable moving between strategy, execution, and details</li>
           <li>I bring calm to chaotic systems</li>
