--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -759,7 +759,7 @@
                                 class="skill">BDD</span></div>
                     </div>
                     <div class="tools-divider">
-                        <h4>🛠️ tools[]</h4>
+                        <h4>🛠️ Tools</h4>
                         <div class="skills-list"><span class="skill">Jira</span><span
                                 class="skill">Confluence</span><span class="skill">Figma</span><span
                                 class="skill">GitHub</span><span class="skill">Airtable</span><span
