--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -7,7 +7,7 @@
     <title>KevinOS — Full Stack Product Manager</title>
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://middleton.io/">
+    <meta property="og:url" content="https://middleton.io/kevinos/">
     <meta property="og:title" content="KevinOS — Full Stack Product Manager">
     <meta property="og:description"
         content="I make complex work feel simple. 12+ years building consumer, enterprise, and platform SaaS products.">
@@ -15,11 +15,11 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://middleton.io/">
+    <meta name="twitter:url" content="https://middleton.io/kevinos">
     <meta name="twitter:title" content="KevinOS — Full Stack Product Manager">
     <meta name="twitter:description"
         content="I make complex work feel simple. 12+ years building consumer, enterprise, and platform SaaS products.">
-    <meta name="twitter:image" content="https://middleton.io/images/kevinos-og.png">
+    <meta name="twitter:image" content="https://middleton.io/kevinos/images/kevinos-og.png">
     <meta name="description"
         content="Kevin Middleton is a Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -759,7 +759,7 @@
                                 class="skill">BDD</span></div>
                     </div>
                     <div class="tools-divider">
-                        <h4>🛠️ Tools</h4>
+                        <h4>🛠️ tools[]</h4>
                         <div class="skills-list"><span class="skill">Jira</span><span
                                 class="skill">Confluence</span><span class="skill">Figma</span><span
                                 class="skill">GitHub</span><span class="skill">Airtable</span><span
@@ -959,13 +959,18 @@
                             <div class="game-final-wave">Wave: <span id="finalWave">1</span></div>
                             <div class="game-message" id="gameMessage">The scope crept. It always does.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="playAgainBtn">🔄 Play Again</button>
-                                <button class="game-btn game-btn-secondary" id="whoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="whoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="playAgainBtn">🔄 Play Again</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta" id="letsConnectBtn">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dinvaders" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dinvaders&text=I%20just%20played%20Scope%20Creep%20Invaders%20%F0%9F%91%BE%20-%20defend%20your%20sprint%20from%20rogue%20feature%20requests" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
@@ -1028,13 +1033,18 @@
                             <div class="game-final-wave">Stories Shipped: <span id="tetrisFinalRows">0</span></div>
                             <div class="game-message" id="tetrisMessage">The backlog won. It always does.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="tetrisPlayAgainBtn">🔄 New Sprint</button>
-                                <button class="game-btn game-btn-secondary" id="tetrisWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="tetrisWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="tetrisPlayAgainBtn">🔄 New Sprint</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dtetris" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dtetris&text=I%20just%20played%20Backlog%20Tetris%20%F0%9F%A7%B1%20-%20where%20the%20backlog%20always%20wins" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
@@ -1102,13 +1112,18 @@
                             <div class="game-final-score">Bugs Squashed: <span id="bugFinalScore">0</span></div>
                             <div class="game-message" id="bugMessage">Too many bugs escaped. QA is not happy.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="bugPlayAgainBtn">🔄 Debug Again</button>
-                                <button class="game-btn game-btn-secondary" id="bugWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="bugWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="bugPlayAgainBtn">🔄 Debug Again</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dbugsquash" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dbugsquash&text=I%20just%20played%20Bug%20Squash%20%F0%9F%90%9B%20-%20whack-a-mole%20but%20for%20production%20bugs" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
@@ -1169,13 +1184,18 @@
                             <div class="game-final-wave">Distance: <span id="runnerFinalDistance">0</span>m</div>
                             <div class="game-message" id="runnerMessage">The roadmap had other plans.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="runnerPlayAgainBtn">🔄 Run Again</button>
-                                <button class="game-btn game-btn-secondary" id="runnerWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="runnerWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="runnerPlayAgainBtn">🔄 Run Again</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Drunner" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Drunner&text=I%20just%20played%20Roadmap%20Runner%20%F0%9F%8F%83%20-%20dodge%20blockers%20on%20the%20road%20to%20launch" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
@@ -1242,13 +1262,18 @@
                             <div class="game-final-wave">Backlog Size: <span id="snakeFinalLength">0</span></div>
                             <div class="game-message" id="snakeMessage">The backlog consumed itself.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="snakePlayAgainBtn">🔄 New Backlog</button>
-                                <button class="game-btn game-btn-secondary" id="snakeWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="snakeWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="snakePlayAgainBtn">🔄 New Backlog</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dsnake" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dsnake&text=I%20just%20played%20Stakeholder%20Snake%20%F0%9F%90%8D%20-%20manage%20a%20growing%20backlog%20of%20requests" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
@@ -1333,13 +1358,18 @@
                             <div class="game-final-wave">Updates Sent: <span id="standupFinalCount">0</span></div>
                             <div class="game-message" id="standupMessage">Meeting adjourned.</div>
                             <div class="game-over-btns">
-                                <button class="game-btn" id="standupPlayAgainBtn">🔄 Another Standup</button>
-                                <button class="game-btn game-btn-secondary" id="standupWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn" id="standupWhoAmIBtn">👤 Meet the PM</button>
+                                <button class="game-btn game-btn-secondary" id="standupPlayAgainBtn">🔄 Another Standup</button>
                             </div>
                             <div class="game-over-cta">
                                 <div class="game-over-bio">Made by a PM who's been in the trenches for 12 years.<br>I bring this energy to product work.</div>
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
-                                <div class="game-share">Beat my score? Screenshot and tag me on <a href="https://linkedin.com/in/kevinmiddleton" target="_blank">LinkedIn</a></div>
+                                <div class="game-share">
+                                    Beat my score? Share it:
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dstandup" target="_blank">LinkedIn</a>
+                                    <span class="share-divider">·</span>
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dstandup&text=I%20just%20played%20Standup%20Speedrun%20%E2%8C%A8%EF%B8%8F%20-%20type%20your%20update%20before%20time%20runs%20out" target="_blank">X</a>
+                                </div>
                                 <button class="game-btn-link see-all-games mobile-only" data-action="see-all-games">← See All Games</button>
                             </div>
                         </div>
