--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -967,7 +967,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta" id="letsConnectBtn">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dinvaders" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dinvaders&text=I%20just%20played%20Scope%20Creep%20Invaders%20%F0%9F%91%BE%20-%20defend%20your%20sprint%20from%20rogue%20feature%20requests" target="_blank">X</a>
                                 </div>
@@ -1041,7 +1041,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dtetris" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dtetris&text=I%20just%20played%20Backlog%20Tetris%20%F0%9F%A7%B1%20-%20where%20the%20backlog%20always%20wins" target="_blank">X</a>
                                 </div>
@@ -1120,7 +1120,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dbugsquash" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dbugsquash&text=I%20just%20played%20Bug%20Squash%20%F0%9F%90%9B%20-%20whack-a-mole%20but%20for%20production%20bugs" target="_blank">X</a>
                                 </div>
@@ -1192,7 +1192,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Drunner" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Drunner&text=I%20just%20played%20Roadmap%20Runner%20%F0%9F%8F%83%20-%20dodge%20blockers%20on%20the%20road%20to%20launch" target="_blank">X</a>
                                 </div>
@@ -1270,7 +1270,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dsnake" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dsnake&text=I%20just%20played%20Stakeholder%20Snake%20%F0%9F%90%8D%20-%20manage%20a%20growing%20backlog%20of%20requests" target="_blank">X</a>
                                 </div>
@@ -1366,7 +1366,7 @@
                                 <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="game-btn game-btn-cta">I'm looking for my next team →</a>
                                 <div class="game-share">
                                     Beat my score? Share it:
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dstandup" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%2F" target="_blank">LinkedIn</a>
                                     <span class="share-divider">·</span>
                                     <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fmiddleton.io%2Fkevinos%3Fgame%3Dstandup&text=I%20just%20played%20Standup%20Speedrun%20%E2%8C%A8%EF%B8%8F%20-%20type%20your%20update%20before%20time%20runs%20out" target="_blank">X</a>
                                 </div>
